# MyEngineLearning

./: README.md
GinkgoEngine/: .gitignore  CMakeLists.txt  GinkgoEngineConfig.h.in
GinkgoEngine/Test/: CMakeLists.txt  GinkgoEngineConfig.h.in  main.cxx
GinkgoEngine/Test/MyLib/: CMakeLists.txt  mysqrt.cxx  mysqrt.h
GinkgoEngine/source/: CMakeLists.txt
GinkgoEngine/source/TestEntry/: CMakeLists.txt  main.cpp
GinkgoEngine/source/libImage/: CMakeLists.txt  libImage.cpp  libImage.h
GinkgoEngine/source/libImage/stb/: stb_image.cpp
GinkgoEngine/source/libMath/: CMakeLists.txt  Color.cpp  Color.h  Config.h  Curve.h  Math.cpp  Math.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h  stdhead.h
GinkgoEngine/source/libMesh/: CMakeLists.txt
GinkgoEngine/source/libRay/: Aabb.cpp  Aabb.h  BVH.h  Bound.cpp  Bound.h  CMakeLists.txt  Capsule.h  Hitable.cpp  Hitable.h  List.h  Material.cpp  Material.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  RayCamera.cpp  RayCamera.h  RayTexture.cpp  RayTexture.h  RayTrace.cpp  RayTrace.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  Triangle.h  drand48.cpp  drand48.h  noise.cpp  noise.h
GinkgoEngine/source/libRenderer/: CMakeLists.txt  libRenderer.cpp
GinkgoEngine/source/libScene/: CMakeLists.txt
